20		Create tree of vassal/liege relationships
21		Country Mappings
22		Iberian Peninsula and Med Islands mapped	
23		Italy and Scandiwegia mapped
24		England save from rho
25		Country Mappings: Independent kingoms
26		European province ownership
27		Merge
28		1-to-1 titular kingdoms mapped
29		Add HRE conversion mechanic
30		European provinces visible to all
31		Merge
32		France province mappings
33		Change country mapping to map a pointer to the EU3 Country itself
34		Output countries
35		Use /history/countries/ instead of /common/countries.txt
36		Change country mapping to map a pointer to the CK2 Title itself
37		Get 1399 governments
38		Merge
39		Merge
40		Fix log when province history file not found
41		Characters imported
42		Add new source files from last change
43		EU3 nation have rulers and rulers have first names
44		getvalue() ignores case
45		Import explicit dynasties
46		Import dynasties from dynasties.txt
47		Export dynasty name with ruler
48		Import history of former rulers and write it out
49		Add Hungary1453_01_01 save
50		Output previous_ruler section
51		Add Sicily save
52		Central Europe Mapped, duplicate mappings removed.
53		Create family trees
54		Merge
55		Lots of blocked nations
56		Children in sorted order in family trees
57		Primogeniture heirs
58		More character information
59		Temporary government of tribal despotism
60		Search up the family tree for primogeniture heirs if needed
61		Eastern Europe mapped.  All mappings (dirty) done.
62		Merge
63		greece & turkey
64		Initial stat conversion
65		Gender laws
66		Merge
67		Unless Absolute Cognatic, female lines only considered after male ones
68		Traits
69		EU3 stats have a minimum of one
70		Actually implement the stats floor
71		Bastards can't be heirs
72		Extrapolate stats for characters younger than 16
73		Stat floors and ceilings implemented
74		Stat floor of 0 for CK2 characters
75		Seniority succession
76		Added 'Lowborn' dynasty
77		Correct lower bound for stats to 3