@@ -77,3 +77,4 @@ Revision	Log Message
 75		Seniority succession
 76		Added 'Lowborn' dynasty
 77		Correct lower bound for stats to 3
+78		Bonus stats go to lowest stat instead of highest
